--- a/index.html
+++ b/index.html
@@ -91,9 +91,21 @@
             transition: opacity 0.3s ease;
             pointer-events: none;
         }
+        @media (max-width: 600px) {
+            .back-btn {
+                top: 60px;
+                font-size: 14px;
+                padding: 10px 18px;
+            }
+            .play-pause-btn {
+                bottom: 120px;
+                font-size: 14px;
+                padding: 10px 20px;
+            }
+        }
         .play-pause-btn {
             position: absolute;
-            bottom: 80px;
+            bottom: 150px;
             left: 50%;
             transform: translateX(-50%);
             padding: 12px 30px;
@@ -371,7 +383,7 @@
             // Handle play-pause button (bottom-center)
             const containerWidth = window.innerWidth;
             const containerHeight = window.innerHeight;
-            const btnBottom = 80; // Same as CSS bottom value
+            const btnBottom = 150; // Same as CSS bottom value
 
             if (e.clientY > containerHeight - btnBottom - thresholdPlayMargin &&
                 Math.abs(e.clientX - containerWidth / 2) < thresholdPlayMargin) {
