--- a/index.html
+++ b/index.html
@@ -144,6 +144,41 @@
                 pointer-events: auto;
             }
         }
+
+        .play-pause-btn {
+            position: absolute;
+            bottom: 150px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 12px 30px;
+            background: rgba(233, 69, 96, 0.9);
+            color: #fff;
+            border-radius: 5px;
+            cursor: pointer;
+            border: none;
+            font-size: 16px;
+            z-index: 1003;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            pointer-events: none;
+        }
+
+        @media (max-width: 600px) {
+            .back-btn {
+                top: 80px;
+                font-size: 14px;
+                padding: 10px 18px;
+                opacity: 1 !important;
+                pointer-events: auto !important;
+            }
+            .play-pause-btn {
+                bottom: 140px;
+                font-size: 14px;
+                padding: 10px 20px;
+                opacity: 1 !important;
+                pointer-events: auto !important;
+            }
+        }
         #errorMessage {
             color: #ff6b6b;
             margin-top: 10px;
